# eye-detector

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
eye_detector/: bioid_black_eyes.py  cam_func.py  cam_net.py  cam_record.py  capture.py  capture_dlib.py  catch_test.py  const.py  eye_data_conv_dlib.py  eye_data_to_hog.py  eye_stats.py  eye_train.py  heatmap.py  hsv_test.py  model.py  pupil_coords.py  test_gen_to_train.py  train.py  train_net.py
eye_detector/capture_dlib/: computes.py  draw.py  loop.py  models.py  utils.py
eye_detector/gen_to_train/: __main__.py  data_loader.py  dump.py  eye.py  eyenose.py  face.py  gaze.py  utils.py
eye_detector/gen_to_train/data_loader/: base.py  eye.py  face.py  gaze.py  op_face.py  op_room.py
eye_detector/gen_to_train/dump/: base.py  eye.py  eyenose.py
eye_detector/gen_to_train/image_transforms/: __init__.py
eye_detector/gen_to_train/transforms/: __init__.py  base.py  hog.py  lbp.py  scale.py  sobel.py
eye_detector/train/: __main__.py  data.py
eye_detector/train/models/: __init__.py  decorator.py  find.py  prob.py  sgd.py  svc.py  torch.py
eye_detector/train_gaze/: __main__.py  dataset.py  model.py  results.py  test.py  train.py
eye_detector/windows/: hog.py  img.py
ros/: .dockerignore  Dockerfile  run.sh
ros/ws/: eye.urdf  eye.xml  rviz.rviz
scripts/: eye_detector
src/eye_detector/: cam_func.py  catch_test.py  dlib_model.py  eye_stats.py  model.py  pupil_coords.py
src/eye_detector/capture_dlib/: computes.py  loop.py  models.py
src/eye_detector/gen_to_train/: face.py
(+47 files in other folders)
